Add Input and Output Demo image in setup guide popup

--- a/index.html
+++ b/index.html
@@ -217,8 +217,9 @@
                         - Set your <strong>microphone/input</strong> to
                         <code>CABLE Output (VB-Audio Virtual Cable)</code><br /></br>
                         - Set your <strong>speaker/output</strong> to your actual headphones or speakers (e.g., "Realtek
-                        Speakers" or "Headphones")<br /></br>
-                        This lets you hear others while they hear your TypeTalk-generated voice.</p>
+                        Speakers" or "Headphones")</p>
+                        <img id="input_output_image" src="assets/input_output_image.png" alt="image to show the input and output settings to do">
+                        <p class="step-description">This lets you hear others while they hear your TypeTalk-generated voice.</p>
                 </div>
             </div>
 
