TypeTalk : MVP completed : Deployed

--- a/index.html
+++ b/index.html
@@ -246,8 +246,8 @@
             <!-- <i class="fa-solid fa-xmark popup-cross"></i> -->
         </div>
         <div class="popup-main">
-            <p class="test-mode-popup-description">TypeTalk lets you speak with your keyboard in online calls and meetings—quickly, clearly, and confidently.</p>
-            <p class="test-mode-popup-description-warning">⚠️ Note: <br> <br> You're currently exploring Test Mode. To begin using TypeTalk in real meetings, just follow these 3 simple steps—we'll guide you through them in setup-guide section.</p>
+            <p class="test-mode-popup-description">TypeTalk lets you speak with your keyboard in online calls and meetings—quickly, clearly.</p>
+            <p class="test-mode-popup-description-warning">⚠️ Note: <br> <br> You're currently exploring Test Mode. To begin using TypeTalk in real Online Voice Calls, just follow these 3 simple steps—we'll guide you through them in setup-guide section.</p>
         </div>
         <div class="buttons-group">
             <button id="test-popup-setupguide-button" class="popup-button">Show Setup Guide</button>
