Fix Grid overflow css problem : Show settings button in case of smaller screens

--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@
                 <button id="dark-mode-button"><i class="fa-solid fa-moon"></i></button>
                 <button id="quick-start-button"><i class="fa-solid fa-bolt"></i><span>Quick Start</span></button>
                 <button id="setup-guide-button"><i class="fa-solid fa-gear"></i><span>Setup Guide</span></button>
+                <a href="https://github.com/abhisarxverma/TypeTalk" target="_blank" title="Github Repository" id="github-icon-link"><i class="fa-brands fa-github"></i></a >
             </div>
         </header>
 
