Clean the setup guide popup

--- a/index.html
+++ b/index.html
@@ -192,8 +192,9 @@
                 <span class="step-number">1</span>
                 <div class="step-group-main">
                     <p class="step-title">Download Safe, Free, and Light, VB-Audio Cable</p>
-                    <p class="step-description">Download and install the free, lightweight software called
-                        <strong>VB-Audio Virtual Cable</strong>. This tool allows your system's generated sound to act
+                    <p class="step-description">
+                        <!-- Download and install the free, lightweight software called -->
+                        <strong>VB-Audio Virtual Cable</strong> tool allows your system's generated sound to act
                         like a microphone input.</p>
                     <a class="step-link" href="https://vb-audio.com/Cable/" target="_blank" rel="noopener noreferrer">
                         Get VB-Audio Cable (Official Site)
@@ -205,8 +206,9 @@
                 <div class="step-group-main">
                     <p class="step-title">From Taskbar set Sound Output to 'Cable Input'</p>
                     <p class="step-description">Go to your <strong>Taskbar</strong> and click the sound icon, then three lines, and set your output
-                        device to <code>CABLE Input (VB-Audio Virtual Cable)</code>.</br></br> This ensures that whatever is
-                        played by your system (TypeTalk voice) will be directed into your mic input</p>
+                        device to <code>CABLE Input (VB-Audio Virtual Cable)</code>.</br>
+                    <!-- </br> This ensures that whatever is
+                        played by your system (TypeTalk voice) will be directed into your mic input</p> -->
                 </div>
             </div>
             <div class="step-group">
@@ -220,7 +222,7 @@
                         - Set your <strong>speaker/output</strong> to your actual headphones or speakers (e.g., "Realtek
                         Speakers" or "Headphones")</p>
                         <img id="input_output_image" src="assets/input_output_image.png" alt="image to show the input and output settings to do">
-                        <p class="step-description">This lets you hear others while they hear your TypeTalk-generated voice.</p>
+                        <!-- <p class="step-description">This lets you hear others while they hear your TypeTalk-generated voice.</p> -->
                 </div>
             </div>
 
