Clean the setup guide popup

--- a/index.html
+++ b/index.html
@@ -205,7 +205,7 @@
                 <span class="step-number">2</span>
                 <div class="step-group-main">
                     <p class="step-title">From Taskbar set Sound Output to 'Cable Input'</p>
-                    <p class="step-description">Go to your <strong>Taskbar</strong> and click the sound icon, then three lines, and set your output
+                    <p class="step-description">Go to your <strong>Taskbar</strong> and click the sound icon, then set your output
                         device to <code>CABLE Input (VB-Audio Virtual Cable)</code>.</br>
                     <!-- </br> This ensures that whatever is
                         played by your system (TypeTalk voice) will be directed into your mic input</p> -->
